--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -76,7 +76,7 @@
 	    
 	<!-- 
 	한글깨짐에 대한 필터설정 : 현재 개발중인 웹애플리케이션 전체에 혀당 필터를 적용한다.
-	웹 애플리케이션으로 들어오는 모든 요청에 대해 문자 인코딩을 UTF-8로 처리한다. t
+	웹 애플리케이션으로 들어오는 모든 요청에 대해 문자 인코딩을 UTF-8로 처리한다.
 	Tomcat10.1에서는 post로 전송시 한글깨짐 현상이 없으나 이전 버전에서는 깨짐현상이 발생하므로 해당 필터설정이 꼭 필요하다.
 	-->
 	<filter>
@@ -91,6 +91,71 @@
 		   <filter-name>SetCharEncoding</filter-name>
 		   <url-pattern>/*</url-pattern>
 	 </filter-mapping>
-	    
+	 
+	 
+ 	<!-- 게시판 페이징 처리를 위한 파라미터 추가 -->
+	<!-- 한 페이지에 출력할 게시물의 갯수 설정 : 10개씩 출력 -->
+	<context-param>
+		<param-name>POSTS_PER_PAGE</param-name>
+		<param-value>10</param-value>
+	</context-param>
+	<!-- 한 블럭당 출력할 페이지번호의 갯수 설정 : 5페이지씩 출력 -->
+	<context-param>
+		<param-name>PAGES_PER_BLOCK</param-name>
+		<param-value>5</param-value>
+	</context-param>
+	
+	 
+	 <!-- 서블릿 매핑하기 -->
+	 <!-- 
+	 웹애플리케이션으로 요청이 들어왔을때 url-pattern에 저장되었는지 확인하여 일치하면 해당 요청을 servlet-class에 지정된 서블릿 클래스로 전달한다.
+	 이때 servlet-name에 지정한 이름을 통해 요청명과 서블릿을 매핑한다.
+	 즉, 특정한 요청이 있을때 해당 요청을 전달하기 위한 서블릿 클래스를 설정하는 것을 "매핑"이라고 한다. 
+	 -->
+	<servlet>
+		<servlet-name>HelloServlet</servlet-name>
+		<servlet-class>servlet.HelloServlet</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>HelloServlet</servlet-name>
+		<url-pattern>/12Servlet/HelloServlet.do</url-pattern>
+	</servlet-mapping>
+	 <!-- 
+	 요청명은 컨텍스트루트를 제외한 슬러쉬로 시작하는 경로명으로 설정해야한다.
+	 만약 슬러쉬로 시작하지 않으면 url-pattern을 인식하지 못해 톰켓이 구동되지 않는다. 
+	 -->
+	 
+	 <!-- 
+	 서블릿 매핑2 : 서블릿에서 즉시 요청에 대한 결과를 출력한다.
+	 				JSP로 포워드 하지 않는다.
+	 -->
+ 	<servlet>
+	 	<servlet-name>DirectServletPrint</servlet-name>
+	 	<servlet-class>servlet.DirectServletPrint</servlet-class>
+ 	</servlet>
+ 	<servlet-mapping>
+	 	<servlet-name>DirectServletPrint</servlet-name>
+	 	<url-pattern>/12Servlet/DirectServletPrint.do</url-pattern>
+ 	</servlet-mapping>
+	 
+	<!-- MVC패턴으로 회원인증을 하기위한 서블릿 매핑 -->
+	<servlet>
+		<servlet-name>MemberAuth</servlet-name>
+		<servlet-class>servlet.MemberAuth</servlet-class>
+	 	<!-- 
+	 	해당 서블릿 내에서만 사용할 수 있는 초기화파라미터.
+	 	context-param으로 정의하는 컨텍스트 초기화 파라미터의 경우 웹애플리케이션 전체에서 사용할 수 있는 전역상수라면, 해당 파라미터는 지역상수라고 할 수 있다. 
+	 	-->
+		<init-param>
+			<param-name>admin_id</param-name>
+			<param-value>nakja</param-value>
+		</init-param>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MemberAuth</servlet-name>
+		<url-pattern>/12Servlet/MemberAuth.mvc</url-pattern>
+	</servlet-mapping>
+	 
+	 
     
 </web-app>
