--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -97,21 +97,21 @@
 	<!-- 한 페이지에 출력할 게시물의 갯수 설정 : 10개씩 출력 -->
 	<context-param>
 		<param-name>POSTS_PER_PAGE</param-name>
-		<param-value>10</param-value>
+		<param-value>2</param-value>
 	</context-param>
 	<!-- 한 블럭당 출력할 페이지번호의 갯수 설정 : 5페이지씩 출력 -->
 	<context-param>
 		<param-name>PAGES_PER_BLOCK</param-name>
-		<param-value>5</param-value>
+		<param-value>2</param-value>
 	</context-param>
 	
 	 
-	 <!-- 서블릿 매핑하기 -->
-	 <!-- 
-	 웹애플리케이션으로 요청이 들어왔을때 url-pattern에 저장되었는지 확인하여 일치하면 해당 요청을 servlet-class에 지정된 서블릿 클래스로 전달한다.
-	 이때 servlet-name에 지정한 이름을 통해 요청명과 서블릿을 매핑한다.
-	 즉, 특정한 요청이 있을때 해당 요청을 전달하기 위한 서블릿 클래스를 설정하는 것을 "매핑"이라고 한다. 
-	 -->
+	<!-- 서블릿 매핑하기 -->
+	<!-- 
+	웹애플리케이션으로 요청이 들어왔을때 url-pattern에 저장되었는지 확인하여 일치하면 해당 요청을 servlet-class에 지정된 서블릿 클래스로 전달한다.
+	이때 servlet-name에 지정한 이름을 통해 요청명과 서블릿을 매핑한다.
+	즉, 특정한 요청이 있을때 해당 요청을 전달하기 위한 서블릿 클래스를 설정하는 것을 "매핑"이라고 한다. 
+	-->
 	<servlet>
 		<servlet-name>HelloServlet</servlet-name>
 		<servlet-class>servlet.HelloServlet</servlet-class>
@@ -120,15 +120,15 @@
 		<servlet-name>HelloServlet</servlet-name>
 		<url-pattern>/12Servlet/HelloServlet.do</url-pattern>
 	</servlet-mapping>
-	 <!-- 
-	 요청명은 컨텍스트루트를 제외한 슬러쉬로 시작하는 경로명으로 설정해야한다.
-	 만약 슬러쉬로 시작하지 않으면 url-pattern을 인식하지 못해 톰켓이 구동되지 않는다. 
-	 -->
-	 
-	 <!-- 
-	 서블릿 매핑2 : 서블릿에서 즉시 요청에 대한 결과를 출력한다.
-	 				JSP로 포워드 하지 않는다.
-	 -->
+	<!-- 
+	요청명은 컨텍스트루트를 제외한 슬러쉬로 시작하는 경로명으로 설정해야한다.
+	만약 슬러쉬로 시작하지 않으면 url-pattern을 인식하지 못해 톰켓이 구동되지 않는다. 
+	-->
+	
+	<!-- 
+	서블릿 매핑2 : 서블릿에서 즉시 요청에 대한 결과를 출력한다.
+					JSP로 포워드 하지 않는다.
+	-->
  	<servlet>
 	 	<servlet-name>DirectServletPrint</servlet-name>
 	 	<servlet-class>servlet.DirectServletPrint</servlet-class>
@@ -156,6 +156,34 @@
 		<url-pattern>/12Servlet/MemberAuth.mvc</url-pattern>
 	</servlet-mapping>
 	 
+	<!-- 모델2 방식의 게시판을 위한 서블릿 매핑 -->
+	<!-- 목록 -->
+	<servlet>
+		<servlet-name>MVCBoardList</servlet-name>
+		<servlet-class>model2.mvcboard.ListController</servlet-class>
+	</servlet>
+	<servlet-mapping>
+		<servlet-name>MVCBoardList</servlet-name>
+		<url-pattern>/mvcboard/list.do</url-pattern>
+	</servlet-mapping>
 	 
+	 <!-- 글쓰기 -->
+	 <!-- 
+	 모델2(서블릿 방식) 게시판의 글쓰기는 파일첨부 기능이 있으므로 multipart에 대한 설정을 추가해야한다.
+	 "파일업로드" 챕터에서는 어노테이션을 통해 설정했지만, 해당 챕터에서는 web.xml에 설정한다.
+	 -->
+	 <servlet>
+	 	<servlet-name>MVCBoardWrite</servlet-name>
+	 	<servlet-class>model2.mvcboard.WriteController</servlet-class>
+	 	<!-- 개별파일의 최대크기와 전체파일의 최대크기를 아래와같이 설정하면된다. -->
+	 	<multipart-config>
+	 		<max-file-size>1048576</max-file-size> <!-- 1MB -->
+	 		<max-request-size>10485760</max-request-size> <!-- 10MB -->
+	 	</multipart-config>
+	 </servlet>
+	 <servlet-mapping>
+	 	<servlet-name>MVCBoardWrite</servlet-name>
+	 	<url-pattern>/mvcboard/write.do</url-pattern>
+	 </servlet-mapping>
     
 </web-app>
